// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCardGroup > renders correctly with a children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <a
        class="styles__xn5ntf1"
        href="http://scaleway.com"
        target="_parent"
      >
        <div
          class="styles__xn5ntf3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__xn5ntf0 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <h3
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              />
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="styles__xn5ntf2"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with description 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <a
        class="styles__xn5ntf1"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="styles__xn5ntf3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__xn5ntf0 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <h3
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                title
              </h3>
            </div>
            <p
              class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              description
            </p>
          </div>
          <div
            class="styles__xn5ntf2"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with different title and subtitle and with custom titleAs and subtitleAs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <a
        class="styles__xn5ntf1"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="styles__xn5ntf3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__xn5ntf0 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <h2
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835 style__1yhcak83e"
              >
                subtitle
              </h2>
              <h1
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                title
              </h1>
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="styles__xn5ntf2"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with link target _parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <a
        class="styles__xn5ntf1"
        href="http://scaleway.com"
        target="_parent"
      >
        <div
          class="styles__xn5ntf3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__xn5ntf0 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <h3
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="styles__xn5ntf2"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with loading prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <div
        class="styles__xn5ntf5"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="styles__vd0uwv1"
            >
              <div
                class="stylesVariants__1niawa2d"
                style="--_1niawa21: 7.5rem;"
              />
              <div
                class="styles__vd0uwv2"
              />
            </div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="styles__vd0uwv1"
            >
              <div
                class="stylesVariants__1niawa2d"
                style="--_1niawa21: 7.5rem;"
              />
              <div
                class="styles__vd0uwv2"
              />
            </div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="styles__vd0uwv1"
            >
              <div
                class="stylesVariants__1niawa2d"
                style="--_1niawa21: 7.5rem;"
              />
              <div
                class="styles__vd0uwv2"
              />
            </div>
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__xn5ntf6 styles__vd0uwv1"
          >
            <div
              class="stylesVariants__1niawa2k"
            />
            <div
              class="styles__vd0uwv2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with required title & hread 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <a
        class="styles__xn5ntf1"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="styles__xn5ntf3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__xn5ntf0 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <h3
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="styles__xn5ntf2"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xn5ntf4 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
    >
      <a
        class="styles__xn5ntf1"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="styles__xn5ntf3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        >
          <div
            class="styles__xn5ntf0 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div>
              <h5
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835 style__1yhcak83e"
              >
                subtitle
              </h5>
              <h3
                class="style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="styles__xn5ntf2"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
